Revert to links opening in the same tab for prerequisites

--- a/content/commerce/ondc/api-guide/order-api.mdx
+++ b/content/commerce/ondc/api-guide/order-api.mdx
@@ -92,9 +92,9 @@ The **Order APIs** can be used to–
 
 <NextPage
   info={{
-    description: "Jump to API Reference",
+    description: "Jump to API reference",
     slug: "/commerce/ondc/api-reference",
-    title: "API Reference",
+    title: "API reference",
   }}
 />
 
