--- a/content/payments/plural/get-started/integration-modes/redirect-flow.mdx
+++ b/content/payments/plural/get-started/integration-modes/redirect-flow.mdx
@@ -17,7 +17,7 @@ The following are the main steps needed for an Redirect integration
 
 ## Create Order
 
-[[API Reference](https://developer.pluralonline.com/reference/create-order)]
+[[API reference](https://developer.pluralonline.com/reference/create-order)]
 Order represents the shopping cart in a payment journey. Order plays a central part in the payment flow as the subsequent transactions such as payment, refund, get status are linked to it. For this, an order must be identified uniquely and to do so you can create and assign a random and unique order_id to an order. This order_id can be used for any subsequently linked transactions to the order.
 
 An order comprises of the following details:
