--- a/content/payments/umap/api-integration/merchants.mdx
+++ b/content/payments/umap/api-integration/merchants.mdx
@@ -10,7 +10,7 @@ visible_in_sidebar: true
 <Text size="small" weight="600">
     PREREQUISITES&nbsp;
 </Text>
-<a href="/payments/umap/quickstart/merchants">🌟 Merchant quickstart ↗</a>
+<a href="/payments/umap/quickstart/merchants" target="_self">🌟 Merchant quickstart ↗</a>
 
 <hr class="primary" />
 
