--- a/content/payments/umap/mandates/generic/unpause.mdx
+++ b/content/payments/umap/mandates/generic/unpause.mdx
@@ -10,7 +10,7 @@ visible_in_sidebar: true
 <Text size="small" weight="600">
     PREREQUISITES&nbsp;
 </Text>
-<a href="/payments/umap/mandates/generic">🌟 UPI mandates generic operations ↗</a>
+<a href="/payments/umap/mandates/generic" target="_self">🌟 UPI mandates generic operations ↗</a>
 
 <hr class="primary" />
 
@@ -68,7 +68,7 @@ After receiving pause operation initiated notification, the merchant can use thi
 <table>
     <tbody>
         <tr>
-            <th>Staging Host</th>
+            <th>Staging host</th>
             <td>
                 <code>https://umap-dev-core.setu.co/api</code>
             </td>
