--- a/content/payments/umap/mandates/generic/update.mdx
+++ b/content/payments/umap/mandates/generic/update.mdx
@@ -10,7 +10,7 @@ visible_in_sidebar: true
 <Text size="small" weight="600">
     PREREQUISITES&nbsp;
 </Text>
-<a href="/payments/umap/mandates/generic">🌟 UPI mandates generic operations ↗</a>
+<a href="/payments/umap/mandates/generic" target="_self">🌟 UPI mandates generic operations ↗</a>
 
 <hr class="primary" />
 
@@ -45,7 +45,7 @@ There are only two updates possible on a UPI mandate
                     <table>
                         <tbody>
                             <tr>
-                                <th>Staging Host</th>
+                                <th>Staging host</th>
                                 <td>
                                     <code>
                                         https://umap-dev-core.setu.co/api
@@ -191,7 +191,7 @@ There are only two updates possible on a UPI mandate
                     <table>
                         <tbody>
                             <tr>
-                                <th>Staging Host</th>
+                                <th>Staging host</th>
                                 <td>
                                     <code>
                                         https://umap-dev-core.setu.co/api
@@ -318,7 +318,7 @@ In addition to the notifications sent by UMAP, Merchant can use this API to chec
 <table>
     <tbody>
         <tr>
-            <th>Staging Host</th>
+            <th>Staging host</th>
             <td>
                 <code>https://umap-dev-core.setu.co/api</code>
             </td>
