--- a/content/payments/umap/mandates/otm.mdx
+++ b/content/payments/umap/mandates/otm.mdx
@@ -10,7 +10,7 @@ visible_in_sidebar: true
 <Text size="small" weight="600">
     PREREQUISITES&nbsp;
 </Text>
-<a href="/payments/umap/mandates">🌟 UPI mandates overview ↗</a>
+<a href="/payments/umap/mandates" target="_self">🌟 UPI mandates overview ↗</a>
 
 <br />
 
