--- a/content/payments/umap/mandates/otm/check-status.mdx
+++ b/content/payments/umap/mandates/otm/check-status.mdx
@@ -10,7 +10,7 @@ visible_in_sidebar: true
 <Text size="small" weight="600">
     PREREQUISITES&nbsp;
 </Text>
-<a href="/payments/umap/mandates/otm/execute" >🌟 Execute mandate ↗</a>
+<a href="/payments/umap/mandates/otm/execute" target="_self">🌟 Execute mandate ↗</a>
 
 
 <br />
