--- a/content/payments/umap/mandates/otm/execute.mdx
+++ b/content/payments/umap/mandates/otm/execute.mdx
@@ -10,7 +10,7 @@ visible_in_sidebar: true
 <Text size="small" weight="600">
     PREREQUISITES&nbsp;
 </Text>
-<a href="/payments/umap/mandates/otm/pre-debit-notify" >🌟 Pre-debit notification ↗</a>
+<a href="/payments/umap/mandates/otm/pre-debit-notify" target="_self">🌟 Pre-debit notification ↗</a>
 
 <br />
 Once the mandate pre debit notification is **successful**, the merchant can execute
