--- a/content/payments/umap/mandates/otm/pre-debit-notify.mdx
+++ b/content/payments/umap/mandates/otm/pre-debit-notify.mdx
@@ -10,7 +10,7 @@ visible_in_sidebar: true
 <Text size="small" weight="600">
     PREREQUISITES&nbsp;
 </Text>
-<a href="/payments/umap/mandates/otm/create">🌟 Create one time mandate ↗</a>
+<a href="/payments/umap/mandates/otm/create" target="_self">🌟 Create one time mandate ↗</a>
 
 <br />
 
@@ -35,7 +35,7 @@ The merchant will have to call the **<i>send mandate pre debit notification API<
 <table>
     <tbody>
         <tr>
-            <th>Staging Host</th>
+            <th>Staging host</th>
             <td>
                 <code>https://umap-dev-core.setu.co/api</code>
             </td>
@@ -180,7 +180,7 @@ In addition to the notifications sent by UMAP, Merchant can use this API to chec
 <table>
     <tbody>
         <tr>
-            <th>Staging Host</th>
+            <th>Staging host</th>
             <td>
                 <code>https://umap-dev-core.setu.co/api</code>
             </td>
