--- a/content/payments/umap/mandates/recurring/check-status.mdx
+++ b/content/payments/umap/mandates/recurring/check-status.mdx
@@ -10,7 +10,7 @@ visible_in_sidebar: true
 <Text size="small" weight="600">
     PREREQUISITES&nbsp;
 </Text>
-<a href="/payments/umap/mandates/recurring/execute">🌟 Execute mandate ↗</a>
+<a href="/payments/umap/mandates/recurring/execute" target="_self">🌟 Execute mandate ↗</a>
 
 <br />
 
@@ -29,7 +29,7 @@ and **<i>check status history API</i>** to payment status of the last 5 payments
                     <table>
                         <tbody>
                             <tr>
-                                <th>Staging Host</th>
+                                <th>Staging host</th>
                                 <td>
                                     <code>
                                         https://umap-dev-core.setu.co/api
@@ -122,7 +122,7 @@ and **<i>check status history API</i>** to payment status of the last 5 payments
                     <table>
                         <tbody>
                             <tr>
-                                <th>Staging Host</th>
+                                <th>Staging host</th>
                                 <td>
                                     <code>
                                         https://umap-dev-core.setu.co/api
