--- a/content/payments/umap/mandates/recurring/create.mdx
+++ b/content/payments/umap/mandates/recurring/create.mdx
@@ -26,7 +26,7 @@ There are 2 ways to create a recurring mandate: **Intent based**, **Collect base
             <table>
                 <tbody>
                     <tr>
-                        <th>Staging Host</th>
+                        <th>Staging host</th>
                         <td>
                             <code>https://umap-dev-core.setu.co/api</code>
                         </td>
@@ -297,7 +297,7 @@ There are 2 ways to create a recurring mandate: **Intent based**, **Collect base
             <table>
                 <tbody>
                     <tr>
-                        <th>Staging Host</th>
+                        <th>Staging host</th>
                         <td>
                             <code>https://umap-dev-core.setu.co/api</code>
                         </td>
@@ -560,7 +560,7 @@ In addition to the notifications sent by UMAP, Merchant can use this API to chec
 <table>
     <tbody>
         <tr>
-            <th>Staging Host</th>
+            <th>Staging host</th>
             <td>
                 <code>https://umap-dev-core.setu.co/api</code>
             </td>
