--- a/content/payments/umap/mandates/single-block-multi-debit/execute.mdx
+++ b/content/payments/umap/mandates/single-block-multi-debit/execute.mdx
@@ -10,7 +10,7 @@ visible_in_sidebar: true
 <Text size="small" weight="600">
     PREREQUISITES&nbsp;
 </Text>
-<a href="/payments/umap/mandates/single-block-multi-debit/create">🌟 Create single block multi debit mandate ↗</a>
+<a href="/payments/umap/mandates/single-block-multi-debit/create" target="_self">🌟 Create single block multi debit mandate ↗</a>
 
 <hr class="primary" />
 
@@ -155,7 +155,7 @@ In addition to the notifications sent by UMAP, Merchant can use this API to chec
 <table>
     <tbody>
         <tr>
-            <th>Staging Host</th>
+            <th>Staging host</th>
             <td>
                 <code>https://umap-dev-core.setu.co/api</code>
             </td>
