--- a/content/payments/umap/merchant-onboarding.mdx
+++ b/content/payments/umap/merchant-onboarding.mdx
@@ -10,14 +10,14 @@ visible_in_sidebar: true
 <Text size="small" weight="600">
     PREREQUISITES&nbsp;
 </Text>
-<a href="/payments/umap/quickstart/aggregators" target="_blank">🌟 Aggregator quickstart ↗</a><br/>
-<a href="/payments/umap/api-integration/aggregators" target="_blank">🌟 Start API integration for aggregators ↗</a>
+<a href="/payments/umap/quickstart/aggregators" target="_self">🌟 Aggregator quickstart ↗</a><br/>
+<a href="/payments/umap/api-integration/aggregators" target="_self">🌟 Start API integration for aggregators ↗</a>
 
 <br/>
 <br/>
 
 <Callout type="warning">
-    The merchant on-boarding APIs are only relevant for an aggregator. If you are an individual merchant, you can proceed to the{" "}<a href="/payments/umap/quickstart">merchant quickstart</a> and either of our product pages <a href="/payments/umap/payments">UPI payments</a> or <a href="/payments/umap/mandates">UPI payments</a>.
+    The merchant on-boarding APIs are only relevant for an aggregator. If you are an individual merchant, you can proceed to the{" "}<a href="/payments/umap/quickstart" target="_self">merchant quickstart</a> and either of our product pages <a href="/payments/umap/payments" target="_self">UPI payments</a> or <a href="/payments/umap/mandates" target="_self">UPI mandates</a>.
 </Callout>
 
 <hr class="primary" />
@@ -45,7 +45,7 @@ After getting the merchant's information, a preliminary verification is conducte
 
 <a
     href="/payments/umap/merchant-onboarding/create-merchant-api"
-    target="_blank"
+    target="_self"
 >
     Create merchant API ↗
 </a>
@@ -62,7 +62,7 @@ This API helps you check the availability of a desired VPA, to ensure it is uniq
 <Text size="small">
     <a
         href="/payments/umap/merchant-onboarding/check-vpa-availability-api"
-        target="_blank"
+        target="_self"
     >
         Check VPA availability API ↗
     </a>
@@ -75,7 +75,10 @@ This API helps you check the availability of a desired VPA, to ensure it is uniq
 
 The next API is used to assign a VPA to the merchant. With this, merchant on-boarding is completed seamlessly! The merchant can now initiate transactions on UPI.
 <Text size="small">
-    <a href="/payments/umap/merchant-onboarding/create-vpa-api" target="_blank">
+    <a 
+        href="/payments/umap/merchant-onboarding/create-vpa-api"
+        target="_self"
+    >
         Create VPA API ↗
     </a>
 </Text>
@@ -92,7 +95,7 @@ If a merchant needs to be disabled by an aggregator then they can call this API 
 <Text size="small">
     <a
         href="/payments/umap/api-reference#/category~merchant/operation~merchant#updateTxnStatus"
-        target="_blank"
+        target="_self"
     >
         Update merchant status API ↗
     </a>
@@ -105,7 +108,7 @@ This API can be called to update the information associated with the merchant li
 <Text size="small">
     <a
         href="/payments/umap/api-reference#/category~merchant/operation~merchant#updateConfig"
-        target="_blank"
+        target="_self"
     >
         Update merchant details API ↗
     </a>
