--- a/content/payments/umap/merchant-onboarding/create-merchant-api.mdx
+++ b/content/payments/umap/merchant-onboarding/create-merchant-api.mdx
@@ -6,7 +6,7 @@ visible_in_sidebar: true
 ---
 
 <Callout type="warning">
-    The merchant on-boarding APIs are only relevant for an aggregator. If you are an individual merchant, you can proceed to the{" "}<a href="/payments/umap/quickstart">merchant quickstart</a> and either of our product pages <a href="/payments/umap/payments">UPI payments</a> or <a href="/payments/umap/mandates">UPI payments</a>.
+    The merchant on-boarding APIs are only relevant for an aggregator. If you are an individual merchant, you can proceed to the{" "}<a href="/payments/umap/quickstart" target="_self">merchant quickstart</a> and either of our product pages <a href="/payments/umap/payments" target="_self">UPI payments</a> or <a href="/payments/umap/mandates" target="_self">UPI mandates</a>.
 </Callout>
 
 <br/>
@@ -48,7 +48,7 @@ You can use the following API, to on-board merchants in UMAP, by providing requi
                     OAuth
                 </a> or <a
                     href="/payments/upi-deeplinks/resources/jwt"
-                    target="_blank">
+                    target="_self">
                     JWT
                 </a>.<br />
                 <br />
@@ -58,7 +58,7 @@ You can use the following API, to on-board merchants in UMAP, by providing requi
         <tr>
             <th>API reference</th>
             <td>
-                <a href="/payments/umap/api-reference#/category~merchant/operation~merchant#createMerchantWrapper"target="_blank">
+                <a href="/payments/umap/api-reference#/category~merchant/operation~merchant#createMerchantWrapper" target="_self">
                     Create merchant ↗
                 </a>
             </td>
