--- a/content/payments/umap/notifications/customer-vpa-verification.mdx
+++ b/content/payments/umap/notifications/customer-vpa-verification.mdx
@@ -6,7 +6,7 @@ visible_in_sidebar: true
 ---
 
 ## Notifications and alerts for customer VPA verification
-These statuses are relevant for the VPA verification done under the <a href="/payments/umap/payments/collect-request">UPI payments collect request</a> product.
+These statuses are relevant for the VPA verification done under the <a href="/payments/umap/payments/collect-request" target="_self">UPI payments collect request</a> product.
 
 ### Details for customer VPA verification statuses
 <Text>
