--- a/content/payments/umap/notifications/disputes.mdx
+++ b/content/payments/umap/notifications/disputes.mdx
@@ -10,7 +10,7 @@ visible_in_sidebar: true
 <Text size="small" weight="600">
     PREREQUISITES&nbsp;
 </Text>
-<a href="/payments/umap/refunds-disputes">🌟 Refunds and disputes ↗</a>
+<a href="/payments/umap/refunds-disputes" target="_self">🌟 Refunds and disputes ↗</a>
 
 <hr class="primary" />
 
