--- a/content/payments/umap/notifications/mandates.mdx
+++ b/content/payments/umap/notifications/mandates.mdx
@@ -10,7 +10,7 @@ visible_in_sidebar: true
 <Text size="small" weight="600">
     PREREQUISITES&nbsp;
 </Text>
-<a href="/payments/umap/mandates">🌟 UPI mandates overview ↗</a>
+<a href="/payments/umap/mandates" target="_self">🌟 UPI mandates overview ↗</a>
 
 <hr class="primary" />
 
@@ -49,5 +49,3 @@ These scenarios are described in more detail under each of the following actions
 - **<a href="/payments/umap/notifications/mandates/revoke">Revoke mandate↗</a>**
 - **<a href="/payments/umap/notifications/mandates/execute">Execute mandate↗</a>**
 - **<a href="/payments/umap/notifications/mandates/notify">Notify mandate success/failure↗</a>**
-
-
