--- a/content/payments/umap/notifications/mandates/pause.mdx
+++ b/content/payments/umap/notifications/mandates/pause.mdx
@@ -9,7 +9,7 @@ visible_in_sidebar: true
 <Text size="small" weight="600">
     PREREQUISITES&nbsp;
 </Text>
-<a href="/payments/umap/mandates/generic/pause">🌟 UPI mandate pause ↗</a>
+<a href="/payments/umap/mandates/generic/pause" target="_self">🌟 UPI mandate pause ↗</a>
 
 <hr class="primary" />
 
