--- a/content/payments/umap/notifications/mandates/revoke.mdx
+++ b/content/payments/umap/notifications/mandates/revoke.mdx
@@ -9,7 +9,7 @@ visible_in_sidebar: true
 <Text size="small" weight="600">
     PREREQUISITES&nbsp;
 </Text>
-<a href="/payments/umap/mandates/generic/revoke">🌟 UPI mandate revoke ↗</a>
+<a href="/payments/umap/mandates/generic/revoke" target="_self">🌟 UPI mandate revoke ↗</a>
 
 <hr class="primary" />
 
