--- a/content/payments/umap/notifications/mandates/unpause.mdx
+++ b/content/payments/umap/notifications/mandates/unpause.mdx
@@ -8,7 +8,7 @@ visible_in_sidebar: true
 <Text size="small" weight="600">
     PREREQUISITES&nbsp;
 </Text>
-<a href="/payments/umap/mandates/generic/unpause">🌟 UPI mandate unpause ↗</a>
+<a href="/payments/umap/mandates/generic/unpause" target="_self">🌟 UPI mandate unpause ↗</a>
 
 <hr class="primary" />
 
