--- a/content/payments/umap/notifications/mandates/update.mdx
+++ b/content/payments/umap/notifications/mandates/update.mdx
@@ -9,7 +9,7 @@ visible_in_sidebar: true
 <Text size="small" weight="600">
     PREREQUISITES&nbsp;
 </Text>
-<a href="/payments/umap/mandates/generic/update">🌟 UPI mandate update ↗</a>
+<a href="/payments/umap/mandates/generic/update" target="_self">🌟 UPI mandate update ↗</a>
 
 <hr class="primary" />
 
