--- a/content/payments/umap/payments.mdx
+++ b/content/payments/umap/payments.mdx
@@ -1,6 +1,6 @@
 ---
-sidebar_title: UPI Payments
-page_title: UPI Payments
+sidebar_title: UPI payments
+page_title: UPI payments
 order: 3
 visible_in_sidebar: true
 ---
