--- a/content/payments/umap/payments/collect-request.mdx
+++ b/content/payments/umap/payments/collect-request.mdx
@@ -1,35 +1,35 @@
 ---
-sidebar_title: Collect Request
-page_title: UPI Payments - Collect
+sidebar_title: Collect request
+page_title: UPI payments - Collect
 order: 2
 visible_in_sidebar: true
 ---
 
-## Accept UPI payments with Collect Requests
+## Accept UPI payments with collect requests
 
-The Collect Request in UPI is a customer-driven payment mode where the merchant initiates a transaction by providing the customer's Virtual Payment Address (VPA). Upon initiation, the customer receives a notification on their UPI app to authorize the transaction, facilitating a seamless payment completion.
+The collect request in UPI is a customer-driven payment mode where the merchant initiates a transaction by providing the customer's Virtual Payment Address (VPA). Upon initiation, the customer receives a notification on their UPI app to authorize the transaction, facilitating a seamless payment completion.
 
 <hr class="primary" />
 
-### Step 1 - Verify Customer VPA (optional)
+### Step 1 - Verify customer VPA (optional)
 In collect, a merchant needs to accept customer vpa as input to create a collect request at customer’s UPI app. The merchant can verify the validity of the vpa input my the customer using this API.
 
 <a href="/payments/umap/api-reference#/category~customer-vpa/operation~customer-vpa#verify"target="_blank">
-    <code>Verify Customer VPA</code> ↗
+    <code>Verify customer VPA</code> ↗
 </a>
 
 <hr class="primary" />
 
-### Step 2 - Create Collect Request 
+### Step 2 - Create collect request 
 A collect product instance is created by the merchant inputting the customer's VPA. This action triggers a collect request, notifying the customer through their UPI app to proceed with the transaction.
 
 <a href="/payments/umap/api-reference#/category~collect/operation~collect#create"target="_blank">
-    <code>Create Collect Request</code> ↗
+    <code>Create collect request</code> ↗
 </a>
 
 <hr class="primary" />
 
-### Step 3 - Retrieve Collect Request
+### Step 3 - Retrieve collect request
 After the customer responds to the collect request, transaction details can be fetched using a unique identifier or retrieval reference number, enabling merchants to access specific collect request.
 
 <a href="/payments/umap/api-reference#/category~collect/operation~collect#fetchById"target="_blank">
@@ -38,7 +38,7 @@ After the customer responds to the collect request, transaction details can be f
 
 <hr class="primary" />
 
-## Collect Flow Interactions
+## Collect flow interactions
 
 <img
   src="https://storage.googleapis.com/strapi-assets/latest/collect-flow/collect-flow.png"
