--- a/content/payments/umap/payments/collect-request/check-status.mdx
+++ b/content/payments/umap/payments/collect-request/check-status.mdx
@@ -1,6 +1,6 @@
 ---
-sidebar_title: Check Status
-page_title: UMAP - Payments - Collect Request - Check Payment Status
+sidebar_title: Check status
+page_title: UMAP payments - Collect request - Check payment status
 order: 3
 visible_in_sidebar: true
 ---
@@ -12,7 +12,7 @@ This is a generic payment status api, that accepts the id of the collect request
 <table>
     <tbody>
         <tr>
-            <th>Staging Host</th>
+            <th>Staging host</th>
             <td>
                 <code>https://umap-dev-core.setu.co/api</code>
             </td>
@@ -48,7 +48,7 @@ This is a generic payment status api, that accepts the id of the collect request
             </td>
         </tr>
         <tr>
-            <th>API Reference</th>
+            <th>API reference</th>
             <td>
                 <a href="/payments/umap/api-reference#/category~payments/operation~payments#fetchLastByProductInstanceId" target="_blank">
                     Check Payment Status ↗
