--- a/content/payments/umap/payments/collect-request/create-collect-request.mdx
+++ b/content/payments/umap/payments/collect-request/create-collect-request.mdx
@@ -1,16 +1,16 @@
 ---
 sidebar_title: Create
-page_title: UMAP - Payments - Create Collect Request
+page_title: UMAP payments - Create collect request
 order: 2
 visible_in_sidebar: true
 ---
 
-## Create Collect Request
+## Create collect request
 This API can be used to create a collect request that initiates a UPI transaction on the user's UPI app by taking vpa as an input.
 <table>
     <tbody>
         <tr>
-            <th>Staging Host</th>
+            <th>Staging host</th>
             <td>
                 <code>https://umap-dev-core.setu.co/api</code>
             </td>
@@ -46,10 +46,10 @@ This API can be used to create a collect request that initiates a UPI transactio
             </td>
         </tr>
         <tr>
-            <th>API Reference</th>
+            <th>API reference</th>
             <td>
                 <a href="/payments/umap/api-reference#/category~collect/operation~collect#create"target="_blank">
-                    Create Collect Request ↗
+                    Create collect request ↗
                 </a>
             </td>
         </tr>
@@ -105,14 +105,14 @@ This API can be used to create a collect request that initiates a UPI transactio
 
 
 
-## Check Collect Request Status
+## Check collect request status
 
 Since collect request directly initiates a transaction on customer's UPI app. The collect request status can also be used to check status of both the transaction and the collect request itself.
 
 <table>
     <tbody>
         <tr>
-            <th>Staging Host</th>
+            <th>Staging host</th>
             <td>
                 <code>https://umap-dev-core.setu.co/api</code>
             </td>
@@ -148,10 +148,10 @@ Since collect request directly initiates a transaction on customer's UPI app. Th
             </td>
         </tr>
         <tr>
-            <th>API Reference</th>
+            <th>API reference</th>
             <td>
                 <a href="/payments/umap/api-reference#/category~collect/operation~collect#fetchById"target="_blank">
-                    Check Collect Request Status ↗
+                    Check collect request status ↗
                 </a>
             </td>
         </tr>
