--- a/content/payments/umap/payments/collect-request/verify-customer-vpa-api.mdx
+++ b/content/payments/umap/payments/collect-request/verify-customer-vpa-api.mdx
@@ -1,18 +1,18 @@
 ---
-sidebar_title: Verify Customer VPA
-page_title: UMAP - Payments - Verify Customer VPA API
+sidebar_title: Verify customer VPA
+page_title: UMAP payments - Verify customer VPA
 order: 1
 visible_in_sidebar: true
 ---
 
-## Verify Customer VPA
+## Verify customer VPA
 
 <p>This gives a merchant an information about the <b><i>customer vpa, payment mode</i></b> which helps the merchant to decide whether to initiate the collect request or not.</p>
 
 <table>
     <tbody>
         <tr>
-            <th>Staging Host</th>
+            <th>Staging host</th>
             <td>
                 <code>https://umap-dev-core.setu.co/api</code>
             </td>
@@ -48,10 +48,10 @@ visible_in_sidebar: true
             </td>
         </tr>
         <tr>
-            <th>API Reference</th>
+            <th>API reference</th>
             <td>
                 <a href="/payments/umap/api-reference#/category~customer-vpa/operation~customer-vpa#verify"target="_blank">
-                    Verify Customer VPA ↗
+                    Verify customer VPA ↗
                 </a>
             </td>
         </tr>
