--- a/content/payments/umap/payments/intent-qr/create-payment-link.mdx
+++ b/content/payments/umap/payments/intent-qr/create-payment-link.mdx
@@ -1,18 +1,18 @@
 ---
 sidebar_title: Create
-page_title: UMAP - Payments - Create Payment Link
+page_title: UMAP payments - Create payment link
 order: 1
 visible_in_sidebar: true
 ---
 
-## Create Payment Link
+## Create payment link
 
 <p>The merchant will have to call the <b><i>create payment link API</i></b> with the correct set of parameters.</p>
 
 <table>
     <tbody>
         <tr>
-            <th>Staging Host</th>
+            <th>Staging host</th>
             <td>
                 <code>https://umap-dev-core.setu.co/api</code>
             </td>
@@ -48,7 +48,7 @@ visible_in_sidebar: true
             </td>
         </tr>
         <tr>
-            <th>API Reference</th>
+            <th>API reference</th>
             <td>
                 <a href="/payments/umap/api-reference#/category~payment-link/operation~payment-link#create"target="_blank">
                     Create Payment Link ↗
@@ -156,7 +156,7 @@ visible_in_sidebar: true
 
 <hr class="primary" />
 
-## Check Payment Link Status
+## Check payment link status
 <Callout type='tip'>This API fetches status of the payment-link itself, not the payment done using it </Callout>
 <br/>
 <p>The merchant can also get the payment link status by payment link id by calling <b><i>check payment link status API</i></b> which can be used for debugging or knowing if payment link is active, inactive or expired.</p>
@@ -164,7 +164,7 @@ visible_in_sidebar: true
 <table>
     <tbody>
          <tr>
-            <th>Staging Host</th>
+            <th>Staging host</th>
             <td>
                 <code>https://umap-dev-core.setu.co/api</code>
             </td>
@@ -200,7 +200,7 @@ visible_in_sidebar: true
             </td>
         </tr>
         <tr>
-            <th>API Reference</th>
+            <th>API reference</th>
             <td>
                 <a href="/payments/umap/api-reference#/category~payment-link/operation~payment-link#fetchById"target="_blank">
                     Check Payment Link Status ↗
