--- a/content/payments/umap/payments/tpv/check-status.mdx
+++ b/content/payments/umap/payments/tpv/check-status.mdx
@@ -1,19 +1,19 @@
 ---
-sidebar_title: Check Status
-page_title: UMAP - Payments - TPV - Check Payment Status
+sidebar_title: Check status
+page_title: UMAP - Payments - TPV - Check payment status
 order: 2
 visible_in_sidebar: true
 ---
 
 
-## Check tpv payment status
+## Check payment status
 
-<p>The merchant can use the <b><i>check status API</i></b> to check the tpv payment status</p>
+<p>The merchant can use the <b><i>check status API</i></b> to check the payment status, for third party verification</p>
 
 <table>
     <tbody>
         <tr>
-            <th>Staging Host</th>
+            <th>Staging host</th>
             <td>
                 <code>https://umap-dev-core.setu.co/api</code>
             </td>
@@ -49,10 +49,10 @@ visible_in_sidebar: true
             </td>
         </tr>
         <tr>
-            <th>API Reference</th>
+            <th>API reference</th>
             <td>
                 <a href="/payments/umap/api-reference#/category~payments/operation~payments#fetchLastByProductInstanceId" target="_blank">
-                    Check Payment Status ↗
+                    Check payment status ↗
                 </a>
             </td>
         </tr>
