--- a/content/payments/umap/payments/tpv/create-tpv.mdx
+++ b/content/payments/umap/payments/tpv/create-tpv.mdx
@@ -13,7 +13,7 @@ The merchant generates a payment link. This unique link serves as the gateway fo
 <table>
     <tbody>
         <tr>
-            <th>Staging Host</th>
+            <th>Staging host</th>
             <td>
                 <code>https://umap-dev-core.setu.co/api</code>
             </td>
@@ -49,7 +49,7 @@ The merchant generates a payment link. This unique link serves as the gateway fo
             </td>
         </tr>
         <tr>
-            <th>API Reference</th>
+            <th>API reference</th>
             <td>
                 <a href="/payments/umap/api-reference#/category~tpv/operation~tpv#createTPV"target="_blank">
                     Create TPV API ↗
@@ -163,7 +163,7 @@ Following the initiation of the transaction, the system retrieves the payment de
 <table>
     <tbody>
         <tr>
-            <th>Staging Host</th>
+            <th>Staging host</th>
             <td>
                 <code>https://umap-dev-core.setu.co/api</code>
             </td>
@@ -199,7 +199,7 @@ Following the initiation of the transaction, the system retrieves the payment de
             </td>
         </tr>
         <tr>
-            <th>API Reference</th>
+            <th>API reference</th>
             <td>
                 <a href="/payments/umap/api-reference#/category~tpv/operation~tpv#fetchTPV"target="_blank">
                     Check TPV Status ↗
