--- a/content/payments/umap/quickstart.mdx
+++ b/content/payments/umap/quickstart.mdx
@@ -7,7 +7,7 @@ visible_in_sidebar: true
 
 ## Quickstart
 
-This guide is for you to get started quickly with UMAP, and to select the combination of products that work best for your business. If you want to understand more about what UMAP is, do read about UMAP in the <a href="/payments/umap/overview">Overview</a> page.
+This guide is for you to get started quickly with UMAP, and to select the combination of products that work best for your business. If you want to understand more about what UMAP is, do read about UMAP in the <a href="/payments/umap/overview" target="_self">Overview</a> page.
 
 <br/>
 
