--- a/content/payments/umap/quickstart/aggregators.mdx
+++ b/content/payments/umap/quickstart/aggregators.mdx
@@ -11,7 +11,7 @@ This guide will help you get started with UMAP integration as an **aggregator**.
 
 <Callout type="tip">
     This quickstart is for an aggregator, if you are a merchant, please refer to the{" "}
-    <a href="/payments/umap/quickstart">
+    <a href="/payments/umap/quickstart" target="_self">
         merchant quickstart
     </a>.
 </Callout>
