--- a/content/payments/umap/quickstart/merchants.mdx
+++ b/content/payments/umap/quickstart/merchants.mdx
@@ -11,7 +11,7 @@ This guide will help you get started with UMAP integration as a **merchant**.
 
 <Callout type="tip">
     This quickstart is for a merchant, if you are an aggregator, please refer to the{" "}
-    <a href="/payments/umap/quickstart">
+    <a href="/payments/umap/quickstart" target="_self">
         aggregator quickstart
     </a>.
 </Callout>
