--- a/content/payments/umap/refunds-disputes/check-refund-status-api.mdx
+++ b/content/payments/umap/refunds-disputes/check-refund-status-api.mdx
@@ -1,20 +1,16 @@
 ---
-sidebar_title: Check Refund Status
-page_title: UMAP - Refunds & Disputes - Check Refund Status API
+sidebar_title: Check refund status
+page_title: UMAP - Refunds and disputes - Check refund status API
 order: 2
 visible_in_sidebar: true
 ---
 
-## Check Refund Status API
+## Check refund status
 
-<Card padding="nano" shape="rounded" marginBottom="micro" marginTop="micro">
-    <Text size="medium" marginBottom="nano" paddingRight="medium" weight="600">
-        Prerequisites
-    </Text>
-    <a href="/payments/umap/refunds-disputes/create-refund-api">
-        Create refund ↗
-    </a>
-</Card>
+<Text size="small" weight="600">
+    PREREQUISITES&nbsp;
+</Text>
+<a href="/payments/umap/refunds-disputes/create-refund-api" target="_self">🌟 Create refund ↗</a>
 
 <hr class="primary" />
 
@@ -29,7 +25,7 @@ visible_in_sidebar: true
 <table>
     <tbody>
         <tr>
-            <th>Staging Host</th>
+            <th>Staging host</th>
             <td>
                 <code>https://umap-dev-core.setu.co/api</code>
             </td>
