--- a/content/payments/umap/refunds-disputes/create-refund-api.mdx
+++ b/content/payments/umap/refunds-disputes/create-refund-api.mdx
@@ -1,18 +1,18 @@
 ---
-sidebar_title: Create Refund
-page_title: UMAP - Refunds & Disputes - Create Refund API
+sidebar_title: Create refund
+page_title: UMAP - Refunds and disputes - Create refund API
 order: 1
 visible_in_sidebar: true
 ---
 
-## Create Refund
+## Create refund
 
 <p>The merchant will have to call the <b><i>create refund API</i></b> with the correct set of parameters.</p>
 
 <table>
     <tbody>
         <tr>
-            <th>Staging Host</th>
+            <th>Staging host</th>
             <td>
                 <code>https://umap-dev-core.setu.co/api</code>
             </td>
@@ -75,7 +75,7 @@ visible_in_sidebar: true
 }`}
 </CodeBlockWithCopy>
 
-<b>In the above response:</b>
+<b>In the above response—</b>
 <ul>
     <li><code>id</code> is a unique refund ID that is associated with this refund and can be used to track it later.</li>
 </ul>
