--- a/content/payments/umap/transaction-monitoring/check-status-api.mdx
+++ b/content/payments/umap/transaction-monitoring/check-status-api.mdx
@@ -1,11 +1,11 @@
 ---
-sidebar_title: Check Status
-page_title: UMAP - Transaction Monitoring - Check Status API
+sidebar_title: Check status
+page_title: UMAP - Transaction monitoring - Check status API
 order: 1
 visible_in_sidebar: true
 ---
 
-## Check Status API
+## Check status
 
 <table>
     <tbody>
@@ -73,5 +73,5 @@ visible_in_sidebar: true
 </CodeBlockWithCopy>
 
 <a href="/payments/umap/api-reference#/category~payments/operation~payments#fetchLastByProductInstanceId"target="_blank">
-<code>Check Status API</code> ↗
+<code>Check status API</code> ↗
 </a>
