--- a/content/payments/umap/transaction-monitoring/check-status-history-api.mdx
+++ b/content/payments/umap/transaction-monitoring/check-status-history-api.mdx
@@ -1,11 +1,11 @@
 ---
-sidebar_title: Check Status History
-page_title: UMAP - Transaction Monitoring - Check Status History API
+sidebar_title: Check status history
+page_title: UMAP - Transaction monitoring - Check status sistory API
 order: 2
 visible_in_sidebar: true
 ---
 
-## Check Status History API
+## Check status history
 
 <table>
     <tbody>
@@ -132,5 +132,5 @@ visible_in_sidebar: true
 </CodeBlockWithCopy>
 
 <a href="/payments/umap/api-reference#/category~payments/operation~payments#fetchHistoryByProductInstanceId"target="_blank">
-<code>Check Status History API</code> ↗
+<code>Check status history API</code> ↗
 </a>
