--- a/content/payments/umap/transaction-monitoring/fetch-payment-api.mdx
+++ b/content/payments/umap/transaction-monitoring/fetch-payment-api.mdx
@@ -1,11 +1,11 @@
 ---
-sidebar_title: Fetch Payment
-page_title: UMAP - Transaction Monitoring - Fetch Payment API
+sidebar_title: Fetch payment
+page_title: UMAP - Transaction monitoring - Fetch payment API
 order: 3
 visible_in_sidebar: true
 ---
 
-## Fetch Payment API
+## Fetch payment
 
 <table>
     <tbody>
