--- a/content/data/account-aggregator/v1/api-reference.mdx
+++ b/content/data/account-aggregator/v1/api-reference.mdx
@@ -1,6 +1,6 @@
 ---
 sidebar_title: API reference
-page_title: Account Aggregator API Reference
+page_title: Account Aggregator API reference
 order: 10
 visible_in_sidebar: true
 ---
