--- a/content/payments/umap/mandates/generic/revoke.mdx
+++ b/content/payments/umap/mandates/generic/revoke.mdx
@@ -10,7 +10,7 @@ visible_in_sidebar: true
 <Text size="small" weight="600">
     PREREQUISITES&nbsp;
 </Text>
-<a href="/payments/umap/mandates/generic">🌟 UPI mandates generic operations ↗</a>
+<a href="/payments/umap/mandates/generic" target="_self">🌟 UPI mandates generic operations ↗</a>
 
 <hr class="primary" />
 
