--- a/content/payments/umap/mandates/otm/create.mdx
+++ b/content/payments/umap/mandates/otm/create.mdx
@@ -360,7 +360,7 @@ In addition to the notifications sent by UMAP, Merchant can use this API to chec
 <table>
     <tbody>
         <tr>
-            <th>Staging Host</th>
+            <th>Staging host</th>
             <td>
                 <code>https://umap-dev-core.setu.co/api</code>
             </td>
