--- a/content/payments/umap/mandates/recurring/execute.mdx
+++ b/content/payments/umap/mandates/recurring/execute.mdx
@@ -10,7 +10,7 @@ visible_in_sidebar: true
 <Text size="small" weight="600">
     PREREQUISITES&nbsp;
 </Text>
-<a href="/payments/umap/mandates/recurring/pre-debit-notify">🌟 Pre-debit notification ↗</a>
+<a href="/payments/umap/mandates/recurring/pre-debit-notify" target="_self">🌟 Pre-debit notification ↗</a>
 
 <br />
 
@@ -172,7 +172,7 @@ In addition to the notifications sent by UMAP, Merchant can use this API to chec
 <table>
     <tbody>
         <tr>
-            <th>Staging Host</th>
+            <th>Staging host</th>
             <td>
                 <code>https://umap-dev-core.setu.co/api</code>
             </td>
