--- a/content/payments/umap/merchant-onboarding/create-vpa-api.mdx
+++ b/content/payments/umap/merchant-onboarding/create-vpa-api.mdx
@@ -6,7 +6,7 @@ visible_in_sidebar: true
 ---
 
 <Callout type="warning">
-    The merchant on-boarding APIs are only relevant for an aggregator. If you are an individual merchant, you can proceed to the{" "}<a href="/payments/umap/quickstart">merchant quickstart</a> and either of our product pages <a href="/payments/umap/payments">UPI payments</a> or <a href="/payments/umap/mandates">UPI payments</a>.
+    The merchant on-boarding APIs are only relevant for an aggregator. If you are an individual merchant, you can proceed to the{" "}<a href="/payments/umap/quickstart" target="_self">merchant quickstart</a> and either of our product pages <a href="/payments/umap/payments" target="_self">UPI payments</a> or <a href="/payments/umap/mandates" target="_self">UPI mandates</a>.
 </Callout>
 
 <br/>
@@ -55,7 +55,7 @@ This API can be used to assign a VPA to a merchant, which will serve as the merc
         <tr>
             <th>API reference</th>
             <td>
-                <a href="/payments/umap/api-reference#/category~vpa/operation~vpa#create"target="_blank">
+                <a href="/payments/umap/api-reference#/category~vpa/operation~vpa#create" target="_blank">
                     Create VPA ↗
                 </a>
             </td>
