--- a/content/payments/umap/payments/intent-qr.mdx
+++ b/content/payments/umap/payments/intent-qr.mdx
@@ -1,42 +1,42 @@
 ---
 sidebar_title: Intent/QR
-page_title: UPI Payments - Intent/QR
+page_title: UPI payments - Intent/QR
 order: 1
 visible_in_sidebar: true
 ---
 
-## Accept UPI payments with Intent / QR
+## Accept UPI payments with intent / QR
 
 Merchants can offer their customers a seamless payment experience by utilizing UMAP APIs to create payment links. These links can either be directly integrated into their applications or converted into QR codes for easy scanning. Below is a detailed guide on how to implement this process:
 
 <hr class="primary" />
 
-### Step 1 - Create Payment Link
+### Step 1 - Create payment link
 In the intent flow, a merchant generates a payment link which can be directly sent to customers, integrated to merchant app or coverted into a QR code which can be scanned by user's UPI app.
 <a href="/payments/umap/api-reference#/category~payment-link/operation~payment-link#create"target="_blank">
-    <code>Generate Payment Link</code> ↗
+    <code>Generate payment link</code> ↗
 </a>
 <br/>
 
 <hr class="primary" />
 
-### Step 2 - Customer Initiates Transaction
+### Step 2 - Wait for customer to initiate transaction
 An intent payment is always initiated by a customer. This can happen in two ways
 * Customer scans a QR code representing the payment link
 * Customer is redirected using payment-link on merchant app
 
 <hr class="primary" />
 
-### Step 3 - Retrieve Payment Details
+### Step 3 - Retrieve payment details
 Following the initiation of the transaction, the system retrieves the payment details. This retrieval is based on the payment link ID or a reference number, ensuring you have access to transaction information for confirmation and record-keeping.
 
 <a href="/payments/umap/api-reference#/category~payment-link/operation~payment-link#fetchById"target="_blank">
-    <code>Retrieve Payment Details</code> ↗
+    <code>Retrieve payment details</code> ↗
 </a>
 
 <hr class="primary" />
 
-## Pay Flow Interactions
+## Payment flow interactions
 
 <img
     src="https://storage.googleapis.com/strapi-assets/latest/pay-flow/pay-flow.png"
