--- a/content/payments/umap/payments/intent-qr/check-status.mdx
+++ b/content/payments/umap/payments/intent-qr/check-status.mdx
@@ -1,6 +1,6 @@
 ---
-sidebar_title: Check Status
-page_title: UMAP - Payments - Intent/QR - Check Payment Status
+sidebar_title: Check status
+page_title: UMAP payments - Intent/QR - Check payment status
 order: 2
 visible_in_sidebar: true
 ---
@@ -10,7 +10,7 @@ This is a generic payment status api, that accepts the id of the payment-link to
 <table>
     <tbody>
         <tr>
-            <th>Staging Host</th>
+            <th>Staging host</th>
             <td>
                 <code>https://umap-dev-core.setu.co/api</code>
             </td>
@@ -46,10 +46,10 @@ This is a generic payment status api, that accepts the id of the payment-link to
             </td>
         </tr>
         <tr>
-            <th>API Reference</th>
+            <th>API reference</th>
             <td>
                 <a href="/payments/umap/api-reference#/category~payments/operation~payments#fetchLastByProductInstanceId" target="_blank">
-                    Check Payment Status ↗
+                    Check payment status ↗
                 </a>
             </td>
         </tr>
@@ -103,7 +103,7 @@ This is a generic payment status api, that accepts the id of the payment-link an
 <table>
     <tbody>
         <tr>
-            <th>Staging Host</th>
+            <th>Staging host</th>
             <td>
                 <code>https://umap-dev-core.setu.co/api</code>
             </td>
@@ -139,7 +139,7 @@ This is a generic payment status api, that accepts the id of the payment-link an
             </td>
         </tr>
         <tr>
-            <th>API Reference</th>
+            <th>API reference</th>
             <td>
                 <a href="/payments/umap/api-reference#/category~payments/operation~payments#fetchHistoryByProductInstanceId" target="_blank">
                     Check Payment History ↗
