--- a/content/payments/umap/refunds-disputes.mdx
+++ b/content/payments/umap/refunds-disputes.mdx
@@ -10,7 +10,7 @@ visible_in_sidebar: true
 <Text size="small" weight="600">
     PREREQUISITES&nbsp;
 </Text>
-<a href="/payments/umap/quickstart">🌟 Quickstart ↗</a>
+<a href="/payments/umap/quickstart" target="_self">🌟 Quickstart ↗</a>
 
 <hr class="primary" />
 
