--- a/content/payments/umap/refunds-disputes/fetch-dispute-api.mdx
+++ b/content/payments/umap/refunds-disputes/fetch-dispute-api.mdx
@@ -1,18 +1,18 @@
 ---
-sidebar_title: Fetch Dispute
-page_title: UMAP - Refunds & Disputes - Fetch Dispute API
+sidebar_title: Fetch dispute
+page_title: UMAP - Refunds and disputes - Fetch dispute API
 order: 3
 visible_in_sidebar: true
 ---
 
-## Fetch Dispute API
+## Fetch dispute
 
 <p>The merchant will have to call the <b><i>fetch dispute API</i></b> with the correct set of parameters.</p>
 
 <table>
     <tbody>
         <tr>
-            <th>Staging Host</th>
+            <th>Staging host</th>
             <td>
                 <code>https://umap-dev-core.setu.co/api</code>
             </td>
@@ -62,7 +62,7 @@ visible_in_sidebar: true
 }`}
 </CodeBlockWithCopy>
 
-<b>In the above response:</b>
+<b>In the above response—</b>
 <ul>
     <li><code>id</code> is a unique dispute ID that is associated with this dispute and can be used to track it later.</li>
 </ul>
